--- a/ivory/ivory.cabal
+++ b/ivory/ivory.cabal
@@ -100,4 +100,4 @@ library
 
   if impl(ghc >= 7.8)
     build-depends:      ghc, hpc, ghc-srcspan-plugin >= 0.2
-    -- exposed-modules:    Ivory.Language.Plugin
+    exposed-modules:    Ivory.Language.Plugin
